css/screen-layout-large.css
@charset "UTF-8";

html,
body {
  margin: 0;
  padding: 0;
}
body {
  padding-bottom: 80px;
}

* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

.container {
  max-width: 780px;
}

.clickable {
  cursor: pointer;
}

img.responsive {
  width: auto;
  max-height: 460px;
  max-width: 100%;
}

.header-container {
  position: relative;
  z-index: 10;
  width: 100%;
  margin: 0 auto;
  padding: 0;
}
.photo-container {
  position: relative;
  height: 517px;
  top: -111px;
  margin-bottom: -111px;
  width: 100%;
  overflow: hidden;
  text-align: center;
}
.layout-container {
  width: 960px;
  margin: 0 auto;
  padding: 0;
}

.header h1 {
  float: left;
  margin: 0 0 0 40px;
  line-height: 1;
}
.header img {
  margin: 28px 40px 0 0;
  float: right;
}

.hometitle {
  text-align: center;
  display: block;
  margin-top: -60px;
}

.hometitle h2 {
  line-height: 1;
  margin: 0;
}

.titlecap {
  font-style: normal;
  text-transform: uppercase;
  font-size: 18px;
  letter-spacing: 2px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 10px 0 20px;
}

.subtitle {
  margin: 10px 0 0;
}

.homethumbs {
  margin-top: 30px;
}

.thumb {
  position: relative;
  float: left;
  display: block;
  height: 160px;
  width: 310px;
  overflow: hidden;
  margin: 4px;
  cursor: pointer !important;
}
.thumb:nth-child(3n) {
  margin-right: 0;
}

.thumbimage {
  position: absolute;
  top: -10px;
  right: -10px;
  left: -10px;
  bottom: -10px;
  z-index: 3;
  cursor: pointer;
  -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
          filter: blur(5px);
}
.thumb:hover .thumbimage {
  cursor: pointer;
  -webkit-filter: none;
     -moz-filter: none;
          filter: none;
}

.thumbwords {
  position: relative;
  display: block;
  top: 63px;
  z-index: 5;
  text-align: center;
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  font-size: 30px;
  color: #fff;
  text-shadow: 0 0 8px rgba(0, 0, 0, 0.35);
  cursor: pointer;
}

.headshot,
.headshotsub {
  float: right;
}
.headshot img,
.headshotsub img {
  height: 50px;
  opacity: .4;
  width: auto;
  cursor: pointer;
  -webkit-clip-path: circle(50% at 50% 50%);
     -moz-clip-path: circle(50% at 50% 50%);
          clip-path: circle(50% at 50% 50%);
  -webkit-transition: opacity 0.25s linear;
     -moz-transition: opacity 0.25s linear;
      -ms-transition: opacity 0.25s linear;
       -o-transition: opacity 0.25s linear;
          transition: opacity 0.25s linear;
}
.headshot img:hover {
  opacity: 1;
}

.headshot p,
.headshotsub p {
  opacity: 0;
  cursor: pointer;
  display: inline;
  position: relative;
  font-family: Garamond, Times, Serif;
  font-weight: normal;
  font-style: oblique;
  font-size: 18px;
  color: #333;
  float: right;
  margin: 82px -40px 0 0;
}
.headshotsub p {
  color: rgba(255,255,255,0);
}

.headshot:hover p,
.headshotsub:hover * {
  opacity: 1;
   -webkit-transition: all 0.25s ease;
      -moz-transition: all 0.25s ease;
       -ms-transition: all 0.25s ease;
        -o-transition: all 0.25s ease;
           transition: all 0.25s ease;
}

.subphoto-rarelead, .subphoto-coinledger, .subphoto-currencycheatsheet, .subphoto-quantcast, .subphoto-bnbledger, .subphoto-creativelive{
  position: absolute;
  top: -30px; bottom: -30px; left: -30px; right: -30px;
  background-size: cover;
}
.subphoto-rarelead {
  background-image: url(../images/rarelead.jpg);
  background-position: 0 0;
  background-repeat: no-repeat;
}
.subphoto-coinledger {
  background-image: url(../images/coinledger.jpg);
  background-position: 0 0;
  background-repeat: no-repeat;
}
.subphoto-currencycheatsheet {
  background-image: url(../images/currencycheatsheet.jpg);
  background-position: 0 0;
  background-repeat: no-repeat;
}
.subphoto-quantcast {
  background-image: url(../images/quantcast.jpg);
  background-position: 0 0;
  background-repeat: no-repeat;
}
.subphoto-bnbledger {
  background-image: url(../images/bnbledger.jpg);
  background-position: 0 0;
  background-repeat: no-repeat;
}
.subphoto-creativelive {
  background-image: url(../images/creativelive.jpg);
  background-position: 0 0;
  background-repeat: no-repeat;
}
.whitecard {
  position: relative;
  display: inline-block;
  background-color: #FFF;
  padding: 20px 40px;
  margin: 150px 15px;;
  -webkit-transition: all 0.25s ease;
     -moz-transition: all 0.25s ease;
      -ms-transition: all 0.25s ease;
       -o-transition: all 0.25s ease;
          transition: all 0.25s ease;
}
.whitecard h5 {
  line-height: .9;
  margin: 5px 0 20px;
}
.whitecard h6 {
  background-color: #FFF;
  text-align: center;
  padding: 10px;
  max-width: 150px;
  margin: 0 auto;
  color: #666;
}
.whitecard:hover h6{
  background-color: #F1F1F1;
  color: #333;
}
.slideshowing .whitecard {
  opacity: 0;
}

.slideshowing .header {
  opacity: 0;
}

.slideshowing .subphoto-rarelead, .slideshowing .subphoto-coinledger, .slideshowing .subphoto-currencycheatsheet, .slideshowing .subphoto-quantcast, .slideshowing .subphoto-bnbledger, .slideshowing .subphoto-creativelive {
  -webkit-filter: grayscale(0%) blur(5px);
     -moz-filter: grayscale(0%) blur(5px);
          filter: grayscale(0%) blur(5px);
}

.eg-modal {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 50;
  visibility: collapse;
  padding: 30px 0;
  overflow: hidden;
  background-color: rgba(0, 0, 0, .3);
  opacity: 0;
  -webkit-transition: opacity 0.25s ease;
     -moz-transition: opacity 0.25s ease;
      -ms-transition: opacity 0.25s ease;
       -o-transition: opacity 0.25s ease;
          transition: opacity 0.25s ease;
}
.slideshowing .eg-modal {
  visibility: visible;
  opacity: 1;
}
.eg-modal-body {
  position: relative;
  z-index: 60;
  opacity: 0;
  height: 100%;
  margin: 0 auto;
  text-align: left;
  -webkit-transition: opacity 0.25s ease;
     -moz-transition: opacity 0.25s ease;
      -ms-transition: opacity 0.25s ease;
       -o-transition: opacity 0.25s ease;
          transition: opacity 0.25s ease;
}
.slideshowing .eg-modal-body {
  opacity: 1;
}
.slick-list,
.slick-slider {
  height: 100%;
}
body .slick-slide,
body .slick-slide.slick-active {
  opacity: 1 !important;
  -webkit-transition: none !important;
     -moz-transition: none !important;
      -ms-transition: none !important;
       -o-transition: none !important;
          transition: none !important;
}
.slick-slide .slide-left,
.slick-slide .slide-right {
  opacity: 0;
  -webkit-transition: opacity 0.25s ease;
     -moz-transition: opacity 0.25s ease;
      -ms-transition: opacity 0.25s ease;
       -o-transition: opacity 0.25s ease;
          transition: opacity 0.25s ease;
}
.slick-slide.slick-active .slide-left {
  opacity: .9;
}
.slick-slide.slick-active .slide-right {
  opacity: 1;
}

.slide-left {
  padding-top: 70px;
  color: #fff;
  line-height: 1.2;
}
.slide-pager {
  display: inline-block;
  margin-bottom: 7px;
  font-style: italic;
  color: rgba(255, 255, 255, .4);
}
.slide-left h4 {
  color: #fff;
  line-height: .75;
  margin: 0;
}
.slide-left hr {
  margin: 1em 0;
  border: 1px solid #fff;
  opacity: .6;
  border-width: 0 0 1px;
}
.slide-left p {
  padding-right: 0px;
  line-height: 28px;
}

.slick-slide img {
  margin: 0 auto;
}
.slick-slide img.center {
  margin-top: 100px;
  max-width: 80%;
}

.left-arrow,
.right-arrow {
  position: absolute;
  top: 50%;
  left: -50px;
  width: 45px;
  height: 45px;
  margin-top: -22px;
  -webkit-transition: all 0.25s ease;
     -moz-transition: all 0.25s ease;
      -ms-transition: all 0.25s ease;
       -o-transition: all 0.25s ease;
          transition: all 0.25s ease;
}
.right-arrow {
  left: auto;
  right: -50px;
}
.close {
  position: absolute;
  top: 50px;
  right: 55px;
  width: 20px;
  height: 20px;
  display: block;
  background-size: 100%;
  cursor: pointer;
  -webkit-transition: opacity 0.25s ease;
     -moz-transition: opacity 0.25s ease;
      -ms-transition: opacity 0.25s ease;
       -o-transition: opacity 0.25s ease;
          transition: opacity 0.25s ease;
}
.left-arrow { background-image: url(http://eringallup.info/images2/arrow_leftart.png); }
.left-arrow:hover { background-image: url(http://eringallup.info/images2/arrow_left2art.png); }
.right-arrow { background-image: url(http://eringallup.info/images2/arrow_rightart.png); }
.right-arrow:hover { background-image: url(http://eringallup.info/images2/arrow_right2art.png); }
.close { background-image: url(http://eringallup.info/images2/closehover.png); opacity: .7; }
.close:hover { opacity: 1; }

.body-container {
  margin-top: 30px;
}
.body-left {
  margin-top: 10px;
}
.body-right {
  line-height: 2em;
}
.body-right p{
  margin: 0 0 1.5em 0;
}
.body-title {
  padding: 15px 0;
  border: 1px solid #ccc;
  border-width: 1px 0;
}
.body-title * {
  color: #333;
  line-height: 1;
  margin: 0;
  text-align: center;
}
.body-title h3 {
  text-transform: uppercase;
  font-family: Garamond, Times, Serif;
  font-size: .85em;
  letter-spacing: 2px;
}

.project,
.details {
  margin-top: 30px;
  padding-top: 30px;
  padding-bottom: 30px;
  background-color: #f1f1f1;
  margin-bottom: 60px;
}
.project-title,
.details-title {
  text-transform: uppercase;
  font-family: Garamond, Times, Serif;
  font-size: 14px;
  color: #999;
  font-style: normal;
  text-align: center;
  letter-spacing: 2px;
}
.project .lead,
.details .lead {
  margin: 15px 0;
  font-size: 15px;
  color: #333;
  text-align: center;
}
.project-items {
  padding: 0 20px;
  margin-top: 15px;
}
.project-item {
  padding: 30px 20px;
  border: 2px solid #fff;
  border-width: 0 2px 0 0;
}
.project-item:last-child {
  border-width: 0;
}
.project-item-top {
  display: inline-block;
  width: 100%;
  height: 130px;
  padding-left: 5px;
  padding-right: 5px;
  text-align: center;
}
.project img {
  max-width: 100%;
  max-height: 100px;
}
.project img.outline {
  border: 1px solid #cfcfcf;
}
.project-item h5,
.details-item h5,
.beforeafter-item h5 {
  margin-bottom: .9em;
  font-size: 30px;
  text-transform: lowercase;
  text-align: center;
}

.details {
  background-color: transparent;
  padding: 15px 0;
  border: 1px solid #ccc;
  border-width: 1px 0;
}
.details-title {
  margin-bottom: 30px;
}
.details-item h5 {
  font-size: 15px;
  color: #ccc;
  margin-bottom: .4em;
  font-style: italic;
  letter-spacing: .03em;
}
.details-item {
  text-align: center;
}


.beforeafter {
  background-color: transparent;
  padding: 15px 0;
  border: 1px solid #ccc;
  border-width: 1px 0;
}
.beforeafter-title {
  margin-bottom: 30px;
}
.beforeafter-item h5 {
  font-size: 15px;
  color: #ccc;
  margin-bottom: .4em;
  font-style: italic;
  letter-spacing: .03em;
}
.beforeafter-item {
  text-align: center;
}










@media (max-width: 767px) {
  .slide-left p {
    padding: 0;
  }
  .whitecard h4 {
    font-size: 1.7em;
  }
  .whitecard h5 {
    font-size: 3em;
  }
  .project-item {
    border-width: 0 0 2px;
    text-align: center;
  }
  .project-item-top {
    padding-top: 0 !important;
    margin-bottom: 15px;
    height: auto;
  }
  .project-item img {
    max-width: 50%;
  }
}
@media (max-width: 479px) {
  .slick-slide img.center {
    margin-top: 0;
  }
}

